--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "express": "~4.12.4",
     "jade": "~1.9.2",
     "morgan": "~1.5.3",
-    "serve-favicon": "~2.2.1"
+    "serve-favicon": "~2.2.1",
+    "lokijs": "~1.3.4",
+    "serve-favicon": "*"
   },
   "devDependencies": {
-    "frisby": "^0.8.5"
+    "frisby": "^0.8.5",
+    "lokijs": "^1.3.4"
   }
 }
